关于版权商标的更改

--- a/about.html
+++ b/about.html
@@ -169,6 +169,13 @@ function toggleDarkMode() {
   document.body.classList.toggle('light');
 }
 </script>
+<footer>
+  <p>© <span id="year"></span> TaTa is Comming™. All Rights Reserved.</p>
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 
 </body>
 </html>
