--- a/contact.html
+++ b/contact.html
@@ -180,5 +180,13 @@ function goHome() {
 }
 </script>
 
+<footer>
+  <p>© <span id="year"></span> TaTa is Comming™. All Rights Reserved.</p>
+</footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 </body>
 </html>
