--- a/about.html
+++ b/about.html
@@ -4,9 +4,15 @@
 <meta charset="UTF-8">
 <title>关于我们与TaTa</title>
 <style>
-body {
+
+html, body {
   margin: 0;
-  height: 100vh;
+  min-height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
   font-family: Arial, "Microsoft YaHei", sans-serif;
   transition: background 0.5s;
 }
@@ -25,6 +31,12 @@ body.dark {
 body.light, body.dark {
   background-size: 400% 400%;
   animation: gradientMove 8s ease infinite;
+}
+
+/* 主内容容器（新增） */
+.main-content {
+  flex: 1;
+  position: relative;
 }
 
 /* 顶部菜单栏 */
@@ -96,7 +108,6 @@ body.dark .navbar {
   color: white;
 }
 
-/* 深色模式卡片 */
 body.dark .card {
   background: rgba(0,0,0,0.25);
   border: 2px solid rgba(255,255,255,0.3);
@@ -137,15 +148,31 @@ body.dark .card img {
   box-shadow: 0 0 15px rgba(255,255,255,0.7);
 }
 
-/* 动态背景动画 */
+/* 底部版权（关键新增） */
+footer {
+  text-align: center;
+  padding: 20px;
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-top: 1px solid rgba(255,255,255,0.2);
+  color: white;
+  font-weight: bold;
+}
+
+/* 动画 */
 @keyframes gradientMove {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+
 </style>
 </head>
+
 <body class="light">
+
+<div class="main-content">
 
 <!-- 顶部菜单栏 -->
 <div class="navbar">
@@ -163,18 +190,19 @@ body.dark .card img {
 <!-- 切换深色模式按钮 -->
 <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
-<script>
-function toggleDarkMode() {
-  document.body.classList.toggle('dark');
-  document.body.classList.toggle('light');
-}
-</script>
+</div>
+
 <footer>
   <p>© <span id="year"></span> TaTa is Comming™. All Rights Reserved.</p>
 </footer>
 
 <script>
-  document.getElementById("year").textContent = new Date().getFullYear();
+function toggleDarkMode() {
+  document.body.classList.toggle('dark');
+  document.body.classList.toggle('light');
+}
+
+document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 
 </body>
