--- a/contact.html
+++ b/contact.html
@@ -11,47 +11,43 @@
 
 <div class="main-content">
 
-<div class="navbar">
-  <a href="index.html">首页</a>
-  <a href="about.html">关于</a>
-  <a href="contact.html">联系</a>
-</div>
+  <div class="navbar">
+    <a href="index.html">首页</a>
+    <a href="about.html">关于</a>
+    <a href="contact.html">联系</a>
+  </div>
 
-<div class="card">
-  <img src="logo.png" width="28">
-  TaTa 来也！
-</div>
+  <div class="card">
+    <img src="logo.png" width="28">
+    TaTa 来也！
+  </div>
 
-<div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
+  <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
-<div style="margin-top:150px;text-align:center;color:white;">
-  <h1>联系两大作者</h1>
   <!-- 页面正文 -->
-<div class="content">
-  <h1>联系 两大作者</h1>
-  <p>如果你想联系网站作者，可以通过以下平台：</p>
+  <div style="margin-top:150px;text-align:center;color:white;">
+    <h1>联系两大作者</h1>
+    <p>如果你想联系网站作者，可以通过以下平台：</p>
 
-  <p>
-    <a href="https://space.bilibili.com/1682798870" target="_blank" style="color:white;">
-      <img src="bilibili.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-      哔哩哔哩
-    </a>
-    |
-    <a href="https://www.xiaohongshu.com/user/profile/68550f23000000001d00a922" target="_blank" style="color:white;">
-      <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-      小红书
-      
-    </a>
-  </p>
-  <p>
-     <a href="https://xhslink.com/m/3EbNZN5sBZy" target="_blank" style="color:white;">
-      <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-      网站作者小红书个人主页awa
-    </a>
-  </p>
-</div>
+    <p>
+      <a href="https://space.bilibili.com/1682798870" target="_blank" style="color:white;">
+        <img src="bilibili.png" width="20" style="vertical-align: middle; margin-right: 5px;">
+        哔哩哔哩
+      </a>
+      |
+      <a href="https://www.xiaohongshu.com/user/profile/68550f23000000001d00a922" target="_blank" style="color:white;">
+        <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
+        小红书
+      </a>
+    </p>
 
-</div>
+    <p>
+      <a href="https://xhslink.com/m/3EbNZN5sBZy" target="_blank" style="color:white;">
+        <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
+        网站作者小红书个人主页 awa
+      </a>
+    </p>
+  </div>
 
 </div>
 
@@ -59,8 +55,7 @@
   © <span id="year"></span> TaTa is Comming™. All Rights Reserved.
 </footer>
 
-<script src="script.js"></script>、
+<script src="script.js"></script>
+
 </body>
 </html>
-
-
