--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" href="icon.ico" type="img/x-icon">
+<link rel="apple-touch-icon" href="logo.ico">
 <meta charset="UTF-8">
 <title>联系 TaTa</title>
 
