--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
 <div style="margin-top:150px;text-align:center;color:white;">
   <h1>关于我们</h1>
-  <p>TaTa 是一个正在成长的创意项目。</p>
+  <p>TaTa 是一款新的潮玩不隶属于任何公司和企业</p>
   <p>未来会持续更新更多内容。</p>
 </div>
 
