--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <a href="index.html">首页</a>
     <a href="about.html">关于</a>
     <a href="contact.html">联系</a>
+    <a href="avatar.html">下载头像</a>
   </div>
 
   <div class="card">
