--- a/avatar.html
+++ b/avatar.html
@@ -5,6 +5,7 @@
   <link rel="apple-touch-icon" href="logo.ico">
   <meta charset="UTF-8">
   <title>头像展示 - TaTa</title>
+  <h1>新年特备</h1>
   <link rel="stylesheet" href="style.css">
   <style>
     /* 保持和 contact.html 风格一致 */
