头像下载问题修复

--- a/avatar.html
+++ b/avatar.html
@@ -107,9 +107,9 @@
         for (let i = 1; i <= 10; i++) {
           document.write(`
             <div class="avatar-item">
-              <img src="avatar${i}.jpg" alt="款式${i}">
+              <img src="txxz/avatar${i}.jpg" alt="款式${i}">
               <p>款式${i}</p>
-              <button onclick="downloadImage('avatar${i}.jpg')">下载</button>
+              <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
             </div>
           `);
         }
