--- a/avatar.html
+++ b/avatar.html
@@ -1,108 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>头像展示 - TaTa</title>
-  <link rel="icon" href="icon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="logo.ico">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-color: #f7f9fc;
-      color: #222;
-      font-family: sans-serif;
-      margin: 0;
-    }
-    .main-content {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      text-align: center;
-    }
-    .navbar a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #222;
-    }
-    .card {
-      background-color: #ffffff;
-      display: inline-block;
-      padding: 10px 20px;
-      margin: 20px 0;
-      border-radius: 10px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.12);
-      color: #222;
-    }
-    .toggle-btn {
-      background-color: #e8eef7;
-      padding: 8px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      display: inline-block;
-      margin-bottom: 20px;
-    }
-    .dark-mode {
-      background-color: #111;
-      color: #eee;
-    }
-    .dark-mode .card {
-      background-color: #222;
-      box-shadow: 0 0 10px #000;
-    }
-    .dark-mode .navbar a {
-      color: #eee;
-    }
-    .dark-mode .toggle-btn {
-      background-color: #666;
-    }
-    .dark-mode .avatar-item {
-      background-color: #222;
-    }
-    .avatar-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .avatar-item {
-      text-align: center;
-      background-color: #fff;
-      padding: 10px;
-      border-radius: 10px;
-      width: 150px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.08);
-    }
-    .avatar-item img {
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 10px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .avatar-item button {
-      padding: 5px 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      background-color: #555;
-      color: white;
-    }
-    .avatar-item button:hover {
-      background-color: #777;
-    }
-    footer {
-      margin-top: 50px;
-      padding: 10px;
-      text-align: center;
-      color: #aaa;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>头像展示 - TaTa</title>
+<link rel="icon" href="icon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="logo.ico">
+<link rel="stylesheet" href="style.css">
+<style>
+body {
+  background-color: #222;
+  color: white;
+  font-family: sans-serif;
+  margin: 0;
+}
+.main-content {
+  max-width: 900px;
+  margin: auto;
+  padding: 20px;
+  text-align: center;
+}
+.navbar a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: white;
+}
+.card {
+  background-color: #333;
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #555;
+}
+.toggle-btn {
+  background-color: #555;
+  padding: 8px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  display: inline-block;
+  margin-bottom: 20px;
+}
+/* 深色模式 */
+.dark-mode {
+  background-color: #111;
+  color: #eee;
+}
+.dark-mode .card {
+  background-color: #222;
+  box-shadow: 0 0 10px #000;
+}
+.dark-mode .navbar a {
+  color: #eee;
+}
+.dark-mode .toggle-btn {
+  background-color: #666;
+}
+.avatar-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+.avatar-item {
+  text-align: center;
+  background-color: #333;
+  padding: 10px;
+  border-radius: 10px;
+  width: 150px;
+}
+.avatar-item img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  object-fit: cover;
+}
+.avatar-item button {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #555;
+  color: white;
+}
+.avatar-item button:hover {
+  background-color: #777;
+}
+footer {
+  margin-top: 50px;
+  padding: 10px;
+  text-align: center;
+  color: #aaa;
+}
+</style>
 </head>
-
 <body>
 
 <div class="main-content">
@@ -121,13 +113,11 @@
 
   <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
-  <div>
-    <h1>头像展示</h1>
-    <p>点击下载你喜欢的头像款式</p>
+  <h1>头像展示</h1>
+  <p>点击下载你喜欢的头像款式</p>
 
-    <div class="avatar-grid" id="avatarGrid">
-      <!-- 头像由 JS 自动生成 -->
-    </div>
+  <div class="avatar-grid" id="avatarGrid">
+    <!-- JS 会生成头像格子 -->
   </div>
 
 </div>
@@ -137,33 +127,31 @@
 </footer>
 
 <script>
-  document.getElementById('year').textContent = new Date().getFullYear();
+document.getElementById('year').textContent = new Date().getFullYear();
 
-  function toggleDarkMode() {
-    document.body.classList.toggle('dark-mode');
-  }
+function toggleDarkMode() {
+  document.body.classList.toggle('dark-mode');
+}
 
-  function downloadImage(src) {
-    const link = document.createElement('a');
-    link.href = src;
-    link.download = src.split('/').pop();
-    link.click();
-  }
+function downloadImage(src) {
+  const link = document.createElement('a');
+  link.href = src;
+  link.download = src.split('/').pop();
+  link.click();
+}
 
-  // 生成头像格子
-  const avatarGrid = document.getElementById('avatarGrid');
-  const avatars = ['avatar.jpg','avatar2.jpg','avatar3.jpg','avatar4.jpg','avatar5.jpg','avatar6.jpg','avatar7.jpg','avatar8.jpg','avatar9.jpg','avatar10.jpg'];
-
-  avatars.forEach((file, index) => {
-    const div = document.createElement('div');
-    div.className = 'avatar-item';
-    div.innerHTML = `
-      <img src="./txxz/${file}" alt="款式${index+1}" onerror="this.onerror=null; this.alt='图片加载失败';">
-      <p>款式${index+1}</p>
-      <button onclick="downloadImage('./txxz/${file}')">下载</button>
-    `;
-    avatarGrid.appendChild(div);
-  });
+// 自动生成头像格子
+const avatarGrid = document.getElementById('avatarGrid');
+for (let i = 1; i <= 10; i++) {
+  const div = document.createElement('div');
+  div.className = 'avatar-item';
+  div.innerHTML = `
+    <img src="txxz/avatar${i}.jpg" alt="款式${i}" onerror="this.src='txxz/avatar${i}.jpg'">
+    <p>款式${i}</p>
+    <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
+  `;
+  avatarGrid.appendChild(div);
+}
 </script>
 
 </body>
