--- a/avatar.html
+++ b/avatar.html
@@ -8,10 +8,11 @@
 <link rel="stylesheet" href="style.css">
 <style>
 body {
-  background-color: #222;
+  background: linear-gradient(135deg, #222 0%, #444 100%);
   color: white;
   font-family: sans-serif;
   margin: 0;
+  transition: background 0.5s;
 }
 .main-content {
   max-width: 900px;
@@ -25,7 +26,7 @@ body {
   color: white;
 }
 .card {
-  background-color: #333;
+  background-color: rgba(50, 50, 50, 0.9);
   display: inline-block;
   padding: 10px 20px;
   margin: 20px 0;
@@ -39,14 +40,14 @@ body {
   cursor: pointer;
   display: inline-block;
   margin-bottom: 20px;
+  transition: background 0.3s;
 }
-/* 深色模式 */
+/* 深色模式渐变 */
 .dark-mode {
-  background-color: #111;
-  color: #eee;
+  background: linear-gradient(135deg, #111 0%, #222 100%);
 }
 .dark-mode .card {
-  background-color: #222;
+  background-color: rgba(30, 30, 30, 0.95);
   box-shadow: 0 0 10px #000;
 }
 .dark-mode .navbar a {
@@ -55,6 +56,7 @@ body {
 .dark-mode .toggle-btn {
   background-color: #666;
 }
+
 .avatar-grid {
   display: flex;
   flex-wrap: wrap;
@@ -64,10 +66,12 @@ body {
 }
 .avatar-item {
   text-align: center;
-  background-color: #333;
+  background-color: rgba(50, 50, 50, 0.9);
   padding: 10px;
   border-radius: 10px;
   width: 150px;
+  transition: all 0.3s ease;
+  cursor: pointer;
 }
 .avatar-item img {
   width: 120px;
@@ -75,6 +79,7 @@ body {
   border-radius: 50%;
   margin-bottom: 10px;
   object-fit: cover;
+  transition: transform 0.3s ease;
 }
 .avatar-item button {
   padding: 5px 10px;
@@ -83,10 +88,21 @@ body {
   cursor: pointer;
   background-color: #555;
   color: white;
+  transition: background 0.3s;
+}
+
+/* 悬停效果 */
+.avatar-item:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(255,255,255,0.2);
+}
+.avatar-item:hover img {
+  transform: scale(1.05);
 }
 .avatar-item button:hover {
   background-color: #777;
 }
+
 footer {
   margin-top: 50px;
   padding: 10px;
@@ -129,10 +145,12 @@ footer {
 <script>
 document.getElementById('year').textContent = new Date().getFullYear();
 
+// 深色模式切换
 function toggleDarkMode() {
   document.body.classList.toggle('dark-mode');
 }
 
+// 下载图片函数
 function downloadImage(src) {
   const link = document.createElement('a');
   link.href = src;
@@ -140,13 +158,13 @@ function downloadImage(src) {
   link.click();
 }
 
-// 自动生成头像格子
+// 自动生成 10 个头像格子
 const avatarGrid = document.getElementById('avatarGrid');
 for (let i = 1; i <= 10; i++) {
   const div = document.createElement('div');
   div.className = 'avatar-item';
   div.innerHTML = `
-    <img src="txxz/avatar${i}.jpg" alt="款式${i}" onerror="this.src='txxz/avatar${i}.jpg'">
+    <img src="txxz/avatar${i}.jpg" alt="款式${i}">
     <p>款式${i}</p>
     <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
   `;
