--- a/avatar.html
+++ b/avatar.html
@@ -86,7 +86,7 @@ body {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #555;
+  background-color: #5c5a5c;
   color: white;
   transition: background 0.3s;
 }
