--- a/avatar.html
+++ b/avatar.html
@@ -1,141 +1,216 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<meta charset="UTF-8">
-<title>头像展示 - TaTa</title>
-<link rel="icon" href="icon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="logo.ico">
-<link rel="stylesheet" href="style.css">
-<style>
-body {
-  background: linear-gradient(135deg, #222 0%, #444 100%);
-  color: white;
-  font-family: sans-serif;
-  margin: 0;
-  transition: background 0.5s;
-}
-.main-content {
-  max-width: 900px;
-  margin: auto;
-  padding: 20px;
-  text-align: center;
-}
-.navbar a {
-  margin: 0 15px;
-  text-decoration: none;
-  color: white;
-}
-.card {
-  background-color: rgba(50, 50, 50, 0.9);
-  display: inline-block;
-  padding: 10px 20px;
-  margin: 20px 0;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #555;
-}
-.toggle-btn {
-  background-color: #555;
-  padding: 8px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-  display: inline-block;
-  margin-bottom: 20px;
-  transition: background 0.3s;
-}
-/* 深色模式渐变 */
-.dark-mode {
-  background: linear-gradient(135deg, #111 0%, #222 100%);
-}
-.dark-mode .card {
-  background-color: rgba(30, 30, 30, 0.95);
-  box-shadow: 0 0 10px #000;
-}
-.dark-mode .navbar a {
-  color: #eee;
-}
-.dark-mode .toggle-btn {
-  background-color: #666;
-}
+  <meta charset="UTF-8">
+  <title>头像展示 - TaTa</title>
+  <link rel="icon" href="icon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="logo.ico">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    html, body {
+      margin: 0;
+      min-height: 100vh;
+      font-family: Arial, "Microsoft YaHei", sans-serif;
+      transition: background 0.5s;
+    }
 
-.avatar-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
-}
-.avatar-item {
-  text-align: center;
-  background-color: rgba(50, 50, 50, 0.9);
-  padding: 10px;
-  border-radius: 10px;
-  width: 150px;
-  transition: all 0.3s ease;
-  cursor: pointer;
-}
-.avatar-item img {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  margin-bottom: 10px;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-}
-.avatar-item button {
-  padding: 5px 10px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  background-color: #5c5a5c;
-  color: white;
-  transition: background 0.3s;
-}
+    body.light {
+      background: linear-gradient(-45deg, white, lightpink, pink, #d35793, #642141);
+    }
 
-/* 悬停效果 */
-.avatar-item:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(255,255,255,0.2);
-}
-.avatar-item:hover img {
-  transform: scale(1.05);
-}
-.avatar-item button:hover {
-  background-color: #777;
-}
+    body.dark {
+      background: linear-gradient(-45deg, #1a1a1a, #330033, #660066, #990099, #cc33cc);
+    }
 
-footer {
-  margin-top: 50px;
-  padding: 10px;
-  text-align: center;
-  color: #aaa;
-}
-</style>
+    body.light, body.dark {
+      background-size: 400% 400%;
+      animation: gradientMove 8s ease infinite;
+      color: white;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* 导航栏 */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      background: rgba(255,255,255,0.08);
+      backdrop-filter: blur(20px);
+      border-bottom: 1px solid rgba(255,255,255,0.2);
+      z-index: 100;
+    }
+
+    .navbar a {
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+      padding: 10px 15px;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    .navbar a:hover {
+      background: rgba(255,255,255,0.15);
+      box-shadow: 0 0 15px rgba(255,255,255,0.8);
+    }
+
+    /* 卡片 */
+    .card {
+      position: fixed;
+      top: 70px;
+      left: 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      width: 250px;
+      padding: 12px 20px;
+      border-radius: 18px;
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(25px);
+      border: 1px solid rgba(255,255,255,0.3);
+      color: white;
+      font-weight: bold;
+      z-index: 50;
+    }
+
+    /* 切换按钮 */
+    .toggle-btn {
+      position: fixed;
+      top: 70px;
+      right: 20px;
+      padding: 8px 12px;
+      border-radius: 10px;
+      cursor: pointer;
+      background: rgba(255,255,255,0.2);
+      color: white;
+      transition: 0.3s;
+      z-index: 50;
+    }
+
+    .toggle-btn:hover {
+      box-shadow: 0 0 15px rgba(255,255,255,0.9);
+    }
+
+    /* 主内容 */
+    .main-content {
+      max-width: 1000px;
+      margin: 140px auto 50px; /* 留出导航和卡片空间 */
+      text-align: center;
+      padding: 0 10px;
+    }
+
+    .avatar-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+
+    .avatar-item {
+      text-align: center;
+      background: rgba(255,255,255,0.1);
+      padding: 10px;
+      border-radius: 12px;
+      width: 150px;
+    }
+
+    .avatar-item img {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 10px;
+    }
+
+    .avatar-item button {
+      padding: 5px 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      background-color: rgba(255,255,255,0.2);
+      color: white;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .avatar-item button:hover {
+      background-color: rgba(255,255,255,0.4);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
+      background: rgba(255,255,255,0.08);
+      backdrop-filter: blur(20px);
+      border-top: 1px solid rgba(255,255,255,0.2);
+      color: white;
+      font-weight: bold;
+    }
+
+    /* 响应式 */
+    @media (max-width: 768px) {
+      .avatar-grid {
+        flex-direction: column;
+        align-items: center;
+      }
+      .avatar-item {
+        width: 80%;
+      }
+      .navbar {
+        flex-direction: column;
+        gap: 10px;
+        height: auto;
+        padding: 10px 0;
+      }
+    }
+  </style>
 </head>
-<body>
+<body class="light">
+
+<div class="navbar">
+  <a href="index.html">首页</a>
+  <a href="about.html">关于</a>
+  <a href="contact.html">联系</a>
+  <a href="avatar.html">下载头像</a>
+</div>
+
+<div class="card">
+  <img src="logo.png" width="28" alt="logo">
+  TaTa 来也！
+</div>
+
+<div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
 <div class="main-content">
-
-  <div class="navbar">
-    <a href="index.html">首页</a>
-    <a href="about.html">关于</a>
-    <a href="contact.html">联系</a>
-    <a href="avatar.html">下载头像</a>
-  </div>
-
-  <div class="card">
-    <img src="logo.png" width="28" style="vertical-align:middle;">
-    TaTa 来也！
-  </div>
-
-  <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
-
   <h1>头像展示</h1>
   <p>点击下载你喜欢的头像款式</p>
 
-  <div class="avatar-grid" id="avatarGrid">
-    <!-- JS 会生成头像格子 -->
+  <div class="avatar-grid">
+    <!-- 循环生成 10 个头像 -->
+    <script>
+      for(let i=1;i<=10;i++){
+        document.write(`
+          <div class="avatar-item">
+            <img src="txxz/avatar${i}.jpg" alt="头像${i}">
+            <p>款式${i}</p>
+            <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
+          </div>
+        `);
+      }
+    </script>
   </div>
-
 </div>
 
 <footer>
@@ -143,33 +218,22 @@ footer {
 </footer>
 
 <script>
-document.getElementById('year').textContent = new Date().getFullYear();
+  // 自动年份
+  document.getElementById('year').textContent = new Date().getFullYear();
 
-// 深色模式切换
-function toggleDarkMode() {
-  document.body.classList.toggle('dark-mode');
-}
+  // 深色/浅色切换
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark');
+    document.body.classList.toggle('light');
+  }
 
-// 下载图片函数
-function downloadImage(src) {
-  const link = document.createElement('a');
-  link.href = src;
-  link.download = src.split('/').pop();
-  link.click();
-}
-
-// 自动生成 10 个头像格子
-const avatarGrid = document.getElementById('avatarGrid');
-for (let i = 1; i <= 10; i++) {
-  const div = document.createElement('div');
-  div.className = 'avatar-item';
-  div.innerHTML = `
-    <img src="txxz/avatar${i}.jpg" alt="款式${i}">
-    <p>款式${i}</p>
-    <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
-  `;
-  avatarGrid.appendChild(div);
-}
+  // 下载头像
+  function downloadImage(src){
+    const link = document.createElement('a');
+    link.href = src;
+    link.download = src.split('/').pop();
+    link.click();
+  }
 </script>
 
 </body>
