--- a/avatar.html
+++ b/avatar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>头像展示 - TaTa</title>
   <link rel="icon" href="icon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="logo.ico">
+  <link rel="apple-touch-icon" href="icon.ico">
   <link rel="stylesheet" href="style.css">
   <style>
     html, body {
