--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="icon" href="icon.ico" type="img/x-icon">
-<link rel="apple-touch-icon" href="logo.ico">
+<link rel="apple-touch-icon" href="icon.ico">
 <meta charset="UTF-8">
 <title>联系 TaTa</title>
 
