--- a/avatar.html
+++ b/avatar.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <title>头像展示 - TaTa</title>
   <link rel="icon" href="icon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" href="icon.ico">
+  <link rel="apple-touch-icon" href="logo.ico">
   <link rel="stylesheet" href="style.css">
   <style>
+    /* 基础布局 */
     html, body {
       margin: 0;
       min-height: 100vh;
@@ -34,6 +35,15 @@
       100% { background-position: 0% 50%; }
     }
 
+    .main-content {
+      flex: 1;
+      position: relative;
+      max-width: 900px;
+      margin: auto;
+      padding: 100px 20px 20px 20px; /* 给导航和卡片留空间 */
+      text-align: center;
+    }
+
     /* 导航栏 */
     .navbar {
       position: fixed;
@@ -43,7 +53,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 20px;
+      gap: 15px;
       background: rgba(255,255,255,0.08);
       backdrop-filter: blur(20px);
       border-bottom: 1px solid rgba(255,255,255,0.2);
@@ -64,94 +74,101 @@
       box-shadow: 0 0 15px rgba(255,255,255,0.8);
     }
 
-    /* 卡片 */
+    /* TaTa 来也 卡片 */
     .card {
       position: fixed;
       top: 70px;
-      left: 20px;
+      left: 15px;
       display: flex;
       align-items: center;
       gap: 10px;
-      width: 250px;
-      padding: 12px 20px;
+      width: 220px;
+      padding: 12px 18px;
       border-radius: 18px;
       background: rgba(255,255,255,0.1);
       backdrop-filter: blur(25px);
       border: 1px solid rgba(255,255,255,0.3);
       color: white;
       font-weight: bold;
-      z-index: 50;
+      z-index: 99;
     }
 
-    /* 切换按钮 */
+    /* 切换模式按钮 */
     .toggle-btn {
       position: fixed;
       top: 70px;
       right: 20px;
-      padding: 8px 12px;
+      padding: 8px 14px;
       border-radius: 10px;
       cursor: pointer;
       background: rgba(255,255,255,0.2);
       color: white;
+      font-weight: bold;
       transition: 0.3s;
-      z-index: 50;
+      z-index: 99;
     }
 
     .toggle-btn:hover {
       box-shadow: 0 0 15px rgba(255,255,255,0.9);
     }
 
-    /* 主内容 */
-    .main-content {
-      max-width: 1000px;
-      margin: 140px auto 50px; /* 留出导航和卡片空间 */
-      text-align: center;
-      padding: 0 10px;
+    /* 页面标题 */
+    h1 {
+      margin-bottom: 10px;
+    }
+    p {
+      margin-bottom: 20px;
     }
 
+    /* 头像网格 */
     .avatar-grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 20px;
-      margin-top: 30px;
+      margin-top: 20px;
     }
 
     .avatar-item {
       text-align: center;
       background: rgba(255,255,255,0.1);
-      padding: 10px;
+      padding: 12px;
       border-radius: 12px;
       width: 150px;
+      box-sizing: border-box;
     }
 
     .avatar-item img {
       width: 120px;
       height: 120px;
-      object-fit: cover;
       border-radius: 50%;
-      margin-bottom: 10px;
+      object-fit: cover;
+      margin-bottom: 8px;
+      border: 2px solid rgba(255,255,255,0.3);
     }
 
     .avatar-item button {
-      padding: 5px 10px;
+      min-width: 80px;
+      max-width: 100%;
+      padding: 6px 12px;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       cursor: pointer;
-      background-color: rgba(255,255,255,0.2);
-      color: white;
+      background: rgba(255,255,255,0.2);
+      color: inherit;
       font-weight: bold;
       transition: 0.3s;
+      display: inline-block;
     }
 
     .avatar-item button:hover {
-      background-color: rgba(255,255,255,0.4);
+      background: rgba(255,255,255,0.35);
     }
 
     footer {
       text-align: center;
       padding: 20px;
-      margin-top: 50px;
+      margin-top: 40px;
       background: rgba(255,255,255,0.08);
       backdrop-filter: blur(20px);
       border-top: 1px solid rgba(255,255,255,0.2);
@@ -159,15 +176,18 @@
       font-weight: bold;
     }
 
-    /* 响应式 */
+    /* 手机端适配 */
     @media (max-width: 768px) {
       .avatar-grid {
         flex-direction: column;
         align-items: center;
+        gap: 15px;
       }
+
       .avatar-item {
         width: 80%;
       }
+
       .navbar {
         flex-direction: column;
         gap: 10px;
@@ -179,62 +199,60 @@
 </head>
 <body class="light">
 
-<div class="navbar">
-  <a href="index.html">首页</a>
-  <a href="about.html">关于</a>
-  <a href="contact.html">联系</a>
-  <a href="avatar.html">下载头像</a>
-</div>
-
-<div class="card">
-  <img src="logo.png" width="28" alt="logo">
-  TaTa 来也！
-</div>
-
-<div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
-
-<div class="main-content">
-  <h1>头像展示</h1>
-  <p>点击下载你喜欢的头像款式</p>
-
-  <div class="avatar-grid">
-    <!-- 循环生成 10 个头像 -->
-    <script>
-      for(let i=1;i<=10;i++){
-        document.write(`
-          <div class="avatar-item">
-            <img src="txxz/avatar${i}.jpg" alt="头像${i}">
-            <p>款式${i}</p>
-            <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
-          </div>
-        `);
-      }
-    </script>
+  <div class="navbar">
+    <a href="index.html">首页</a>
+    <a href="about.html">关于</a>
+    <a href="contact.html">联系</a>
+    <a href="avatar.html">下载头像</a>
   </div>
-</div>
 
-<footer>
-  © <span id="year"></span> TaTa is Comming™. All Rights Reserved.
-</footer>
+  <div class="card">
+    <img src="logo.png" width="28" alt="logo">
+    TaTa 来也！
+  </div>
 
-<script>
-  // 自动年份
-  document.getElementById('year').textContent = new Date().getFullYear();
+  <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
-  // 深色/浅色切换
-  function toggleDarkMode() {
-    document.body.classList.toggle('dark');
-    document.body.classList.toggle('light');
-  }
+  <div class="main-content">
+    <h1>头像展示</h1>
+    <p>点击下载你喜欢的头像款式</p>
 
-  // 下载头像
-  function downloadImage(src){
-    const link = document.createElement('a');
-    link.href = src;
-    link.download = src.split('/').pop();
-    link.click();
-  }
-</script>
+    <div class="avatar-grid">
+      <!-- 十个头像 -->
+      <!-- 假设图片都在 txxz 文件夹 -->
+      <script>
+        for (let i = 1; i <= 10; i++) {
+          document.write(`
+            <div class="avatar-item">
+              <img src="txxz/avatar${i}.jpg" alt="款式${i}">
+              <p>款式${i}</p>
+              <button onclick="downloadImage('txxz/avatar${i}.jpg')">下载</button>
+            </div>
+          `);
+        }
+
+        function downloadImage(src) {
+          const link = document.createElement('a');
+          link.href = src;
+          link.download = src.split('/').pop();
+          link.click();
+        }
+
+        function toggleDarkMode() {
+          document.body.classList.toggle('dark');
+          document.body.classList.toggle('light');
+        }
+      </script>
+    </div>
+  </div>
+
+  <footer>
+    © <span id="year"></span> TaTa is Comming™. All Rights Reserved.
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 
 </body>
 </html>
