--- a/contact.html
+++ b/contact.html
@@ -1,64 +1,187 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-<link rel="icon" href="icon.ico" type="img/x-icon">
-<link rel="apple-touch-icon" href="icon.ico">
 <meta charset="UTF-8">
 <title>联系 TaTa</title>
-
+<link rel="icon" href="icon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="icon.ico">
 <link rel="stylesheet" href="style.css">
+<style>
+/* 保持和 about.html/index.html 一样的样式 */
+html, body {
+  margin: 0;
+  min-height: 100vh;
+  font-family: Arial, "Microsoft YaHei", sans-serif;
+  transition: background 0.5s;
+}
+
+body.light {
+  background: linear-gradient(-45deg, white, lightpink, pink, #d35793, #642141);
+}
+
+body.dark {
+  background: linear-gradient(-45deg, #1a1a1a, #330033, #660066, #990099, #cc33cc);
+}
+
+body.light, body.dark {
+  background-size: 400% 400%;
+  animation: gradientMove 8s ease infinite;
+  color: white;
+}
+
+@keyframes gradientMove {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.main-content {
+  flex: 1;
+  position: relative;
+  max-width: 900px;
+  margin: auto;
+  padding: 100px 20px 20px 20px;
+  text-align: center;
+}
+
+/* 导航栏 */
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(20px);
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+  z-index: 100;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 8px;
+  transition: 0.3s;
+}
+
+.navbar a:hover {
+  background: rgba(255,255,255,0.15);
+  box-shadow: 0 0 15px rgba(255,255,255,0.8);
+}
+
+/* TaTa 来也卡片 */
+.card {
+  position: fixed;
+  top: 70px;
+  left: 15px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  width: 220px;
+  padding: 12px 18px;
+  border-radius: 18px;
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(25px);
+  border: 1px solid rgba(255,255,255,0.3);
+  color: white;
+  font-weight: bold;
+  z-index: 99;
+}
+
+/* 切换按钮 */
+.toggle-btn {
+  position: fixed;
+  top: 70px;
+  right: 20px;
+  padding: 8px 14px;
+  border-radius: 10px;
+  cursor: pointer;
+  background: rgba(255,255,255,0.2);
+  color: white;
+  font-weight: bold;
+  transition: 0.3s;
+  z-index: 99;
+}
+
+.toggle-btn:hover {
+  box-shadow: 0 0 15px rgba(255,255,255,0.9);
+}
+
+/* 页面内容 */
+h1 { margin-bottom: 10px; }
+p { margin-bottom: 15px; }
+a { color: white; text-decoration: none; }
+a:hover { text-decoration: underline; }
+
+/* 底部 */
+footer {
+  text-align: center;
+  padding: 20px;
+  margin-top: 40px;
+  background: rgba(255,255,255,0.08);
+  backdrop-filter: blur(20px);
+  border-top: 1px solid rgba(255,255,255,0.2);
+  color: white;
+  font-weight: bold;
+}
+
+/* 手机端适配 */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    gap: 10px;
+    height: auto;
+    padding: 10px 0;
+  }
+}
+</style>
 </head>
 
-<body>
+<body class="light">
+
+<div class="navbar">
+  <a href="index.html">首页</a>
+  <a href="about.html">关于</a>
+  <a href="contact.html">联系</a>
+  <a href="avatar.html">下载头像</a>
+</div>
+
+<div class="card">
+  <img src="logo.png" width="28" alt="logo">
+  TaTa 来也！
+</div>
+
+<div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
 
 <div class="main-content">
-
-  <div class="navbar">
-    <a href="index.html">首页</a>
-    <a href="about.html">关于</a>
-    <a href="contact.html">联系</a>
-    <a href="avatar.html">下载头像</a>
-  </div>
-
-  <div class="card">
-    <img src="logo.png" width="28">
-    TaTa 来也！
-  </div>
-
-  <div class="toggle-btn" onclick="toggleDarkMode()">切换深色模式</div>
-
-  <!-- 页面正文 -->
-  <div style="margin-top:150px;text-align:center;color:white;">
-    <h1>联系两大作者</h1>
-    <p>如果你想联系网站作者，可以通过以下平台：</p>
-
-    <p>
-      <a href="https://space.bilibili.com/1682798870" target="_blank" style="color:white;">
-        <img src="bilibili.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-        哔哩哔哩
-      </a>
-      |
-      <a href="https://www.xiaohongshu.com/user/profile/68550f23000000001d00a922" target="_blank" style="color:white;">
-        <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-        小红书
-      </a>
-    </p>
-
-    <p>
-      <a href="https://xhslink.com/m/3EbNZN5sBZy" target="_blank" style="color:white;">
-        <img src="xhs.png" width="20" style="vertical-align: middle; margin-right: 5px;">
-        网站作者小红书个人主页 awa
-      </a>
-    </p>
-  </div>
-
+  <h1>联系 TaTa</h1>
+  <p>如果你想联系网站作者，可以通过以下平台：</p>
+  <p>
+    <a href="https://space.bilibili.com/1682798870" target="_blank">哔哩哔哩</a> |
+    <a href="https://www.xiaohongshu.com/user/profile/68550f23000000001d00a922" target="_blank">小红书</a>
+  </p>
+  <p>
+    <a href="https://xhslink.com/m/3EbNZN5sBZy" target="_blank">网站作者小红书个人主页 awa</a>
+  </p>
 </div>
 
 <footer>
   © <span id="year"></span> TaTa is Comming™. All Rights Reserved.
 </footer>
 
-<script src="script.js"></script>
+<script>
+  document.getElementById('year').textContent = new Date().getFullYear();
+
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark');
+    document.body.classList.toggle('light');
+  }
+</script>
 
 </body>
 </html>
