--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ html, body {
 }
 
 body.light {
-  background: linear-gradient(-45deg, white, lightpink, pink, #d35793, #642141);
+  background: linear-gradient(-45deg, rgb(253, 222, 222), lightpink, pink, #d35793, #642141);
 }
 
 body.dark {
