--- a/index.html
+++ b/index.html
@@ -183,44 +183,48 @@ footer {
 <!-- 弹窗 HTML -->
 <div id="backupPopup">
   <p>如果本站无法访问，请访问副站：<br>
-  <a href="https://tataiscomming.ddns.net/" target="_blank">hhttps://tataiscomming.ddns.net/</a></p>
+  <a href="https://副站地址.com" target="_blank">https://副站地址.com</a></p>
   <button onclick="closePopup()">关闭</button>
 </div>
 
 <style>
-/* 弹窗样式 */
+/* 弹窗样式 - 清爽风格 */
 #backupPopup {
   display: none; /* 默认隐藏 */
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 300px;
-  padding: 20px;
-  background: rgba(0,0,0,0.85);
-  color: white;
-  border: 2px solid #ffa500;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.5);
+  width: 280px;
+  padding: 18px;
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(20px);
+  border: 1px solid rgba(255,255,255,0.3);
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
   z-index: 1000;
   text-align: center;
-}
-#backupPopup a {
-  color: #ffa500;
-  word-break: break-all;
-}
-#backupPopup button {
-  margin-top: 10px;
-  padding: 5px 12px;
-  background: #ffa500;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
   color: white;
   font-weight: bold;
 }
+#backupPopup a {
+  color: #ff99ff; /* 紫粉色链接 */
+  word-break: break-all;
+  text-decoration: underline;
+}
+#backupPopup button {
+  margin-top: 12px;
+  padding: 6px 14px;
+  background: rgba(255,255,255,0.2);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  transition: 0.3s;
+}
 #backupPopup button:hover {
-  background: #ff7f00;
+  background: rgba(255,255,255,0.35);
 }
 </style>
 
@@ -237,11 +241,11 @@ function closePopup() {
 }
 
 // 页面加载后延迟显示一次弹窗
-window.onload = function() {
+window.addEventListener('load', function() {
   if (!localStorage.getItem('backupPopupShown')) {
-    setTimeout(showPopup, 1000); // 延迟1秒显示
+    setTimeout(showPopup, 1000);
   }
-};
+});
 </script>
 
 </body>
