--- a/index.html
+++ b/index.html
@@ -183,48 +183,44 @@ footer {
 <!-- 弹窗 HTML -->
 <div id="backupPopup">
   <p>如果本站无法访问，请访问副站：<br>
-  <a href="https://副站地址.com" target="_blank">https://副站地址.com</a></p>
+  <a href="https://tataiscomming.ddns.net/" target="_blank">hhttps://tataiscomming.ddns.net/</a></p>
   <button onclick="closePopup()">关闭</button>
 </div>
 
 <style>
-/* 弹窗样式 - 清爽风格 */
+/* 弹窗样式 */
 #backupPopup {
   display: none; /* 默认隐藏 */
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 280px;
-  padding: 18px;
-  background: rgba(255,255,255,0.1);
-  backdrop-filter: blur(20px);
-  border: 1px solid rgba(255,255,255,0.3);
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+  width: 300px;
+  padding: 20px;
+  background: rgba(0,0,0,0.85);
+  color: white;
+  border: 2px solid #f084cf;
+  border-radius: 8px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.5);
   z-index: 1000;
   text-align: center;
-  color: white;
-  font-weight: bold;
 }
 #backupPopup a {
-  color: #ff99ff; /* 紫粉色链接 */
+  color: #f384c8;
   word-break: break-all;
-  text-decoration: underline;
 }
 #backupPopup button {
-  margin-top: 12px;
-  padding: 6px 14px;
-  background: rgba(255,255,255,0.2);
+  margin-top: 10px;
+  padding: 5px 12px;
+  background: #e5a2dd;
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
   cursor: pointer;
   color: white;
   font-weight: bold;
-  transition: 0.3s;
 }
 #backupPopup button:hover {
-  background: rgba(255,255,255,0.35);
+  background: #e486d4;
 }
 </style>
 
@@ -241,11 +237,11 @@ function closePopup() {
 }
 
 // 页面加载后延迟显示一次弹窗
-window.addEventListener('load', function() {
+window.onload = function() {
   if (!localStorage.getItem('backupPopupShown')) {
-    setTimeout(showPopup, 1000);
+    setTimeout(showPopup, 1000); // 延迟1秒显示
   }
-});
+};
 </script>
 
 </body>
